[package]
edition = "2021"
name = "replit_ruspty"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rustix = "0.38.30"
rustix-openpty = "0.1.1"
libc = "0.2.152"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
