[package]
edition = "2021"
name = "replit_ruspty"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
backoff = "0.4.0"
libc = "0.2.152"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
nix = { version = "0.29.0", features = ["fs", "term", "poll", "signal", "ptrace"] }

[target.'cfg(target_os = "linux")'.dependencies]
anyhow = "1.0.94"
log = { version = "0.4.22", features = ["kv"] }
syscalls = "0.6.18"

[dev-dependencies]
tempfile = "3.14.0"
env_logger = { version = "0.11.8", features = ["kv"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
